--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "zod": "^4.1.5",
+    "zod-prisma-types": "^3.2.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
